feat(playback): 添加剧集标题显示功能
- 在TmdbPlaybackActivity中添加episodeTitles参数传递
- 实现applyTmdbEpisodeTitles方法来处理剧集标题显示
- 添加getEpisodeTitles方法解析传递的剧集标题数据
- 修改Episode类添加displayName字段支持自定义显示名称
- 更新EpisodeAdapter使用displayName而非name字段
- 在TmdbDetailActivity中实现selectedTmdbEpisodeTitles方法获取选中剧集标题
- 移除hideIntroButton方法及相关逻辑

refactor(video): 优化视频详情界面布局结构

- 移除PartUtil和Arrays相关无用导入
- 添加Synopsis内容显示功能，替换原有的内容设置逻辑
- 更新界面元素可见性控制逻辑
- 重新设计界面焦点导航顺序，移除part相关的焦点处理
- 移除array适配器相关代码，简化界面结构
- 添加页面背景图显示功能

style(layout): 更新视频播放界面UI组件

- 在activity_video.xml中添加页面背景图片和遮罩层
- 调整各组件的样式属性，包括颜色、字体大小、边距等
- 添加flagTitle、episodeTitle、tmdbContentTitle等标题文本控件
- 重新组织界面布局结构，提升视觉效果